@@ -1,0 +1,17 @@
+# $NetBSD: Makefile,v 1.1.1.1 2005/07/20 13:08:15 rillig Exp $
+#
+
+DISTNAME=		Yap-4.4.4
+CATEGORIES=		lang
+MASTER_SITES=		http://www.ncc.up.pt/~vsc/Yap/
+
+MAINTAINER=		rillig@NetBSD.org
+HOMEPAGE=		http://www.ncc.up.pt/~vsc/Yap/
+COMMENT=		ISO-compliant Prolog
+
+USE_PKGLOCALEDIR=	yes
+GNU_CONFIGURE=		yes
+
+CONFIGURE_ENV+=		INDENT=${TRUE:Q}
+
+.include "../../mk/bsd.pkg.mk"
