@@ -1,0 +1,204 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2005/07/20 13:08:15 rillig Exp $
+bin/yap
+include/Yap/YapInterface.h
+include/Yap/c_interface.h
+include/Yap/yap_structs.h
+lib/Yap/random.so
+lib/Yap/regexp.so
+lib/Yap/startup
+lib/Yap/sys.so
+lib/Yap/yap2swi.so
+lib/Yap/yap_tries.so
+lib/libYap.a
+share/Yap/CHR.LICENSE
+share/Yap/CLPQR.LICENSE
+share/Yap/apply_macros.yap
+share/Yap/assoc.yap
+share/Yap/atts.yap
+share/Yap/avl.yap
+share/Yap/charsio.yap
+share/Yap/chr.yap
+share/Yap/chr/chrcmp.pl
+share/Yap/chr/compenv.pl
+share/Yap/chr/concat.pl
+share/Yap/chr/examples/allentable.pl
+share/Yap/chr/examples/arc.pl
+share/Yap/chr/examples/bool.pl
+share/Yap/chr/examples/cft.pl
+share/Yap/chr/examples/domain.pl
+share/Yap/chr/examples/examples-adder.bool
+share/Yap/chr/examples/examples-benchmark.math
+share/Yap/chr/examples/examples-deussen.bool
+share/Yap/chr/examples/examples-diaz.bool
+share/Yap/chr/examples/examples-fourier.math
+share/Yap/chr/examples/examples-holzbaur.math
+share/Yap/chr/examples/examples-lim1.math
+share/Yap/chr/examples/examples-lim2.math
+share/Yap/chr/examples/examples-lim3.math
+share/Yap/chr/examples/examples-puzzle.bool
+share/Yap/chr/examples/examples-queens.bool
+share/Yap/chr/examples/examples-queens.domain
+share/Yap/chr/examples/examples-stuckey.math
+share/Yap/chr/examples/examples-thom.math
+share/Yap/chr/examples/gcd.pl
+share/Yap/chr/examples/interval.pl
+share/Yap/chr/examples/kl-one.pl
+share/Yap/chr/examples/leq.pl
+share/Yap/chr/examples/list.pl
+share/Yap/chr/examples/listdom.pl
+share/Yap/chr/examples/math-elim.pl
+share/Yap/chr/examples/math-fougau.pl
+share/Yap/chr/examples/math-fourier.pl
+share/Yap/chr/examples/math-gauss.pl
+share/Yap/chr/examples/math-utilities.pl
+share/Yap/chr/examples/minmax.pl
+share/Yap/chr/examples/modelgenerator.pl
+share/Yap/chr/examples/osf.pl
+share/Yap/chr/examples/oztype.pl
+share/Yap/chr/examples/path.pl
+share/Yap/chr/examples/pathc.pl
+share/Yap/chr/examples/primes.pl
+share/Yap/chr/examples/scheduling.pl
+share/Yap/chr/examples/tarski.pl
+share/Yap/chr/examples/term.pl
+share/Yap/chr/examples/time-pc.pl
+share/Yap/chr/examples/time-point.pl
+share/Yap/chr/examples/time-rnd.pl
+share/Yap/chr/examples/time.pl
+share/Yap/chr/examples/tree.pl
+share/Yap/chr/examples/type.pl
+share/Yap/chr/getval.pl
+share/Yap/chr/matching.pl
+share/Yap/chr/operator.pl
+share/Yap/chr/ordering.pl
+share/Yap/chr/sbag.pl
+share/Yap/chr/sbag_a.pl
+share/Yap/chr/sbag_l.pl
+share/Yap/chr/trace.yap
+share/Yap/cleanup.yap
+share/Yap/clpq.yap
+share/Yap/clpq/arith_q.yap
+share/Yap/clpq/class.yap
+share/Yap/clpq/geler.yap
+share/Yap/clpq/nf.yap
+share/Yap/clpq/nfq.yap
+share/Yap/clpqr/arith.pl
+share/Yap/clpqr/bb.yap
+share/Yap/clpqr/bv.yap
+share/Yap/clpqr/compenv.pl
+share/Yap/clpqr/dump.pl
+share/Yap/clpqr/examples/README
+share/Yap/clpqr/examples/SESSION/010
+share/Yap/clpqr/examples/SESSION/011
+share/Yap/clpqr/examples/SESSION/012
+share/Yap/clpqr/examples/SESSION/013
+share/Yap/clpqr/examples/SESSION/014
+share/Yap/clpqr/examples/SESSION/015
+share/Yap/clpqr/examples/SESSION/016
+share/Yap/clpqr/examples/SESSION/017
+share/Yap/clpqr/examples/SESSION/018
+share/Yap/clpqr/examples/SESSION/019
+share/Yap/clpqr/examples/SESSION/020
+share/Yap/clpqr/examples/SESSION/021
+share/Yap/clpqr/examples/SESSION/022
+share/Yap/clpqr/examples/SESSION/023
+share/Yap/clpqr/examples/SESSION/024
+share/Yap/clpqr/examples/SESSION/030
+share/Yap/clpqr/examples/SESSION/031
+share/Yap/clpqr/examples/SESSION/032
+share/Yap/clpqr/examples/SESSION/033
+share/Yap/clpqr/examples/SESSION/034
+share/Yap/clpqr/examples/SESSION/035
+share/Yap/clpqr/examples/SESSION/110
+share/Yap/clpqr/examples/SESSION/111
+share/Yap/clpqr/examples/SESSION/112
+share/Yap/clpqr/examples/SESSION/113
+share/Yap/clpqr/examples/SESSION/114
+share/Yap/clpqr/examples/SESSION/115
+share/Yap/clpqr/examples/SESSION/116
+share/Yap/clpqr/examples/SESSION/117
+share/Yap/clpqr/examples/SESSION/118
+share/Yap/clpqr/examples/SESSION/119
+share/Yap/clpqr/examples/SESSION/120
+share/Yap/clpqr/examples/SESSION/122
+share/Yap/clpqr/examples/SESSION/123
+share/Yap/clpqr/examples/SESSION/124
+share/Yap/clpqr/examples/SESSION/130
+share/Yap/clpqr/examples/SESSION/131
+share/Yap/clpqr/examples/SESSION/132
+share/Yap/clpqr/examples/SESSION/133
+share/Yap/clpqr/examples/SESSION/134
+share/Yap/clpqr/examples/SESSION/135
+share/Yap/clpqr/examples/caneghem.pl
+share/Yap/clpqr/examples/eliminat.pl
+share/Yap/clpqr/examples/matmul.pl
+share/Yap/clpqr/examples/mg.pl
+share/Yap/clpqr/examples/mip.pl
+share/Yap/clpqr/examples/monash/README
+share/Yap/clpqr/examples/monash/air
+share/Yap/clpqr/examples/monash/amplif
+share/Yap/clpqr/examples/monash/complex
+share/Yap/clpqr/examples/monash/critical
+share/Yap/clpqr/examples/monash/dnf
+share/Yap/clpqr/examples/monash/fib
+share/Yap/clpqr/examples/monash/findroot
+share/Yap/clpqr/examples/monash/invert
+share/Yap/clpqr/examples/monash/laplace
+share/Yap/clpqr/examples/monash/mortgage
+share/Yap/clpqr/examples/monash/nrev
+share/Yap/clpqr/examples/monash/option
+share/Yap/clpqr/examples/monash/pictures
+share/Yap/clpqr/examples/monash/rkf45
+share/Yap/clpqr/examples/monash/rlc
+share/Yap/clpqr/examples/monash/smm
+share/Yap/clpqr/examples/monash/toolpath
+share/Yap/clpqr/examples/monash/zebra
+share/Yap/clpqr/examples/root.pl
+share/Yap/clpqr/examples/simplex.pl
+share/Yap/clpqr/examples/squares.pl
+share/Yap/clpqr/expand.yap
+share/Yap/clpqr/fourmotz.pl
+share/Yap/clpqr/ineq.yap
+share/Yap/clpqr/itf3.pl
+share/Yap/clpqr/monash.pl
+share/Yap/clpqr/ordering.yap
+share/Yap/clpqr/printf.pl
+share/Yap/clpqr/project.pl
+share/Yap/clpqr/redund.pl
+share/Yap/clpqr/store.yap
+share/Yap/clpr.yap
+share/Yap/clpr/arith_r.yap
+share/Yap/clpr/class.yap
+share/Yap/clpr/geler.yap
+share/Yap/clpr/nf.yap
+share/Yap/clpr/nfr.yap
+share/Yap/heaps.yap
+share/Yap/icon_address.pl
+share/Yap/lists.yap
+share/Yap/logtalk.yap
+share/Yap/logtalk/logtalk.pl
+share/Yap/logtalk/yap430.config
+share/Yap/ordsets.yap
+share/Yap/pillow.pl
+share/Yap/prandom.yap
+share/Yap/queues.yap
+share/Yap/random.yap
+share/Yap/regexp.yap
+share/Yap/system.yap
+share/Yap/terms.yap
+share/Yap/timeout.yap
+share/Yap/trees.yap
+share/Yap/tries.yap
+share/Yap/ugraphs.yap
+@dirrm share/Yap/logtalk
+@dirrm share/Yap/clpr
+@dirrm share/Yap/clpqr/examples/monash
+@dirrm share/Yap/clpqr/examples/SESSION
+@dirrm share/Yap/clpqr/examples
+@dirrm share/Yap/clpqr
+@dirrm share/Yap/clpq
+@dirrm share/Yap/chr/examples
+@dirrm share/Yap/chr
+@dirrm share/Yap
+@dirrm lib/Yap
+@dirrm include/Yap
